# Multi-Generator-Deepfake-Document-Detection-and-Tamper-Localization

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: convnext_tiny.yaml  default.yaml  hf_segformer_b0.yaml  segformer_lite.yaml  swin_t.yaml
data/: README.md
docs/: GITHUB_PUBLISHING.md
outputs/: README.md
scripts/: analyze_receipts.py  audit_dataset.py  batch_infer.py  build_manifests.py  cross_dataset_studies.py  evaluate.py  finalize_project.py  predict.py  setup_env.ps1  smoke_test.py  sota_wrappers.py  train.py
src/ddfd/: advanced_models.py  batch_inference.py  core.py  sota_wrappers.py
