[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfake-document-detection"
version = "0.1.0"
description = "AI-forged and manipulated document detection"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "opencv-python>=4.8",
  "tqdm>=4.66",
  "PyYAML>=6.0",
  "rich>=13.0",
  "pytesseract>=0.3.10"
]

[tool.setuptools.packages.find]
where = ["src"]
